@@ -1,4 +1,4 @@
-CUSTOM BLOCKS PACK READ-ME -- VERSION A21.2.001.0051
+CUSTOM BLOCKS PACK READ-ME -- VERSION A21.2.001.0052
 
 GOAL:
 
