@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0052 :
+* Removed cbponfire, cbponfireoffset because of errors.
+
 A21.2.001.0051 :
 * Random trash pile helper
 * Invisible end loot blocks
